--- a/css/classes.css
+++ b/css/classes.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:ital@0;1&display=swap");
 
 html,
 body {
   padding: 1em;
   margin: 0;
-  font-family: 'Lato', 'Poppins';
+  font-family: Lato, Poppins, sans-serif;
   box-sizing: border-box;
   color: #333;
 }
@@ -36,7 +36,7 @@ tr:nth-child(even) {
   background-color: green;
 }
 
-.bookList {
+.book-list {
   border: 0.125rem solid #333;
   border-radius: 0.25rem;
   width: 50%;
@@ -45,13 +45,13 @@ tr:nth-child(even) {
 }
 
 .title,
-.formAdd {
+.form-add {
   text-align: center;
   color: #dd8a6f91;
 }
 
-.formAdd::before {
-  content: '';
+.form-add::before {
+  content: "";
   height: 3px;
   width: 8rem;
   margin: 0 auto;
@@ -63,7 +63,7 @@ tr:nth-child(even) {
   background: #dd8a6f91;
 }
 
-.formInput {
+.form-input {
   margin: 0 auto;
   max-width: 16rem;
   box-sizing: border-box;
